fix: adjusting card aligns

--- a/css/pages/home/home.css
+++ b/css/pages/home/home.css
@@ -32,7 +32,7 @@
 .card-container {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
     width: 90%;
 }
 
